--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="share">
         <a href="https://github.com/orgs/RathnavelSubramaniam/teams/fullstack-javascript-mca-2021" class="fab fa-github"></a>
         <a href="https://www.linkedin.com/feed/" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-youtube"></a>
+        <a href="https://youtu.be/W2bSG9QFaqY" class="fab fa-youtube"></a>
     </div>
 
 </section>
